[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/resources/themes/default.tres" type="Theme" id=1]
[ext_resource path="res://data/scripts/menu/play.gd" type="Script" id=2]

[node name="PlayMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="PlayPanel" type="Panel" parent="."]
margin_left = 780.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="RichTextLabel" type="RichTextLabel" parent="PlayPanel"]
margin_right = 1140.0
margin_bottom = 120.0
bbcode_enabled = true
bbcode_text = "[center][b][color=#ffff00]Play[/color][/b][/center]"
text = "Play"

[node name="OptionButton" type="OptionButton" parent="PlayPanel"]
margin_left = 600.0
margin_top = 180.0
margin_right = 1020.0
margin_bottom = 240.0
toggle_mode = false

[node name="Label" type="Label" parent="PlayPanel"]
margin_left = 60.0
margin_top = 180.0
margin_right = 540.0
margin_bottom = 240.0
mouse_filter = 1
text = "Level"
align = 2
valign = 1

[node name="Button" type="Button" parent="PlayPanel"]
margin_left = 600.0
margin_top = 840.0
margin_right = 1020.0
margin_bottom = 960.0
text = "Play"

[node name="LevelInformation" type="RichTextLabel" parent="PlayPanel"]
margin_left = 420.0
margin_top = 300.0
margin_right = 1020.0
margin_bottom = 780.0
bbcode_enabled = true

[connection signal="item_selected" from="PlayPanel/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="PlayPanel/Button" to="." method="_on_Button_pressed"]
